--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.5.0",
+    "grunt-mocha-test": "^0.10.2",
     "should": "^3.3.1"
   }
 }
